# visual_control_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml  pyproject.toml
calibration_pkg/: CMakeLists.txt  README.md  package.xml
calibration_pkg/config/: eye_calibration.toml  handeye_calibration.toml  handeye_evaluation.toml  handeye_params.toml  tcp_calibration_p3d.toml
calibration_pkg/include/calibration_pkg/: handeye_calibration.hpp  handeye_evaluation.hpp
calibration_pkg/launch/: calibration_pkg.launch.py
calibration_pkg/launch/eye/: eye_calibration.launch.py
calibration_pkg/launch/handeye/: handeye_calibration.launch.py  handeye_evaluation.launch.py
calibration_pkg/launch/tcp/: tcp_calibration_p3d.launch.py
calibration_pkg/scripts/: eye_calibration.py  tcp_calibration_p3d.py
calibration_pkg/src/: handeye_calibration.cpp  handeye_evaluation.cpp
control_pkg/: CMakeLists.txt  README.md  package.xml
control_pkg/config/: ibvs_controller.toml  oc_planner.toml  pbvs_controller.toml  pose_controller.toml
control_pkg/include/control_pkg/: ibvs_controller.hpp  kdlIkSolverVel_wdls.hpp  pbvs_controller.hpp  pose_controller.hpp  vpRobotRos.hpp
control_pkg/include/control_pkg/utils/: structs.hpp  tf2.hpp
control_pkg/launch/: control_pkg.launch.py  isaac.launch.py
control_pkg/launch/controllers/: ibvs_controller.launch.py  pbvs_controller.launch.py  pose_controller.launch.py
control_pkg/launch/planners/: oc_planner.launch.py
control_pkg/lib/: vpRobotRos.cpp
control_pkg/scripts/: oc_planner.py
control_pkg/src/: ibvs_controller.cpp  ibvs_controller.hpp  pbvs_controller.cpp  pbvs_controller.hpp  pose_controller.cpp  pose_controller.hpp
logging_pkg/: CMakeLists.txt  README.md  package.xml
logging_pkg/config/: eyecalib_logger.toml  eyedtc_logger.toml  hecalib_logger.toml  heeval_logger.toml  ibvs_logger.toml  pbvs_logger.toml  tcpcalib_p3d_logger.toml
logging_pkg/launch/: logging_pkg.launch.py
logging_pkg/launch/loggers/: eyecalib_logger.launch.py  eyedtc_logger.launch.py  hecalib_logger.launch.py  heeval_logger.launch.py  ibvs_logger.launch.py  pbvs_logger.launch.py  tcpcalib_p3d_logger.launch.py
logging_pkg/logging_pkg/loggers/: csv.py  ros.py  wandb.py
logging_pkg/logging_pkg/utils/: common.py
logging_pkg/logging_pkg/utils/plots/: common.py  pose_error.py
logging_pkg/scripts/: ros_logger.py
logging_pkg/tests/unit/: loggers.py  metrics.py  objectives.py
robot_description_pkg/: CMakeLists.txt  README.md  package.xml
robot_description_pkg/meshes/: examination_bed.dae  robot_stand.dae
robot_description_pkg/urdf/: isaac_robot_cell_macro.xacro  robot_cell.urdf.xacro  robot_eef_macro.xacro
robot_description_pkg/urdf/common/: marker_macro.xacro  room_macro.xacro
state_estimation_pkg/: CMakeLists.txt  README.md  package.xml
state_estimation_pkg/config/: apriltag_estimator.toml  charuco_estimator.toml  pose_estimator.toml
state_estimation_pkg/include/state_estimation_pkg/: apriltag_estimator.hpp  marker_estimator.hpp  pose_estimator.hpp  traits.hpp
state_estimation_pkg/include/state_estimation_pkg/actions/: base.hpp  point_features.hpp  se3_features.hpp  unit.hpp  visual_features.hpp
state_estimation_pkg/include/state_estimation_pkg/filters/: manif_ekf.hpp
state_estimation_pkg/include/state_estimation_pkg/measurements/: base.hpp  unit.hpp
state_estimation_pkg/include/state_estimation_pkg/utils/: mappings.hpp
state_estimation_pkg/launch/: state_estimation_pkg.launch.py
state_estimation_pkg/launch/estimators/: apriltag_estimator.launch.py  charuco_estimator.launch.py  pose_estimator.launch.py
state_estimation_pkg/src/: apriltag_estimator.cpp  apriltag_estimator.hpp  marker_estimator.cpp  pose_estimator.cpp
system_pkg/: CMakeLists.txt  README.md  package.xml
system_pkg/launch/isaac/: eyecalib_isaac.launch.py  handeye_isaac.launch.py  hecalib_isaac.launch.py  heeval_isaac.launch.py  main_isaac.launch.py  tcpcalib_isaac.launch.py
vc_core/: CMakeLists.txt  README.md  package.xml  pyproject.toml
vc_core/include/vc_core/: traits.hpp  utils.hpp
vc_core/include/vc_core/actions/: base.hpp  pointFeatures.hpp  point_features.hpp  se3Features.hpp  se3_features.hpp  unit.hpp  visualFeatures.hpp
vc_core/include/vc_core/calib/: handEyeCalib.hpp
vc_core/include/vc_core/calibration/: handeyeEngine.hpp
vc_core/include/vc_core/filters/: ekf.hpp  lowPassFilter.hpp  manif_ekf.hpp
vc_core/include/vc_core/measurements/: base.hpp  unit.hpp
vc_core/include/vc_core/robot/: ikSolverVel_wdls.hpp  kdlIkSolverVel_wdls.hpp  vpRobotRos.hpp
vc_core/include/vc_core/utils/: structs.hpp  (+4 more)
vc_core/src/robot/: ikSolverVel_wdls.cpp  kdlIkSolverVel_wdls.cpp  vpRobotRos.cpp
vc_core/tests/unit/: loggers.py  metrics.py  objectives.py
vc_core/vc_core/dr/: losses.py
vc_core/vc_core/loggers/: __init__.py  base.py  console.py  csv.py  memory.py  ros.py
vc_core/vc_core/metrics/: base.py  compose.py  delta.py  functional.py  unit.py
vc_core/vc_core/objectives/: __init__.py  rot_norm.py
vc_core/vc_core/ocp/: __init__.py
vision_pkg/: CMakeLists.txt  README.md  package.xml
vision_pkg/config/: charuco_detector.toml  eye_detector.toml
vision_pkg/include/vision_pkg/: charuco_detector.hpp
vision_pkg/launch/: vision_pkg.launch.py
vision_pkg/launch/detectors/: apriltag_detector.launch.py  charuco_detector.launch.py  eye_detector.launch.py  isaac_ros_apriltag.launch.py
vision_pkg/scripts/: eye_detector.py
vision_pkg/src/: charuco_detector.cpp
visualization_pkg/: CMakeLists.txt  README.md  package.xml
visualization_pkg/config/: detection_visualizer.toml  plan_visualizer.toml  trajectory_visualizer.toml
visualization_pkg/launch/: visualization_pkg.launch.py
visualization_pkg/launch/visualizers/: detection_visualizer.launch.py  plan_visualizer.launch.py  robot_visualizer.launch.py  trajectory_visualizer.launch.py
visualization_pkg/rviz/: isaac.rviz
visualization_pkg/rviz/isaac/: eyecalib.rviz  hecalib.rviz  heeval.rviz  isaac.rviz
visualization_pkg/scripts/: detection_visualizer.py  plan_visualizer.py  trajectory_visualizer.py
(+184 files in other folders)
