[project]
name = "visual_control_pkg"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy >= 1.26.4",
    "torch >= 2.0.0",
    "torchvision",
    "pandas",
    "opencv-python",
    "pillow",
    "matplotlib >= 3.8.4",
    "wandb",
    "toml",
    "fire",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.setuptools]
packages = ["visual_control_pkg"]

# Setup environment for DR using PyTorch3D
[tool.pixi.feature.drp3d.dependencies]
iopath = "*"

# PyTorch3D has to be separated into a task for torch to be installed first
[tool.pixi.tasks]
install-pytorch3d = "pip install --no-build-isolation git+https://github.com/facebookresearch/pytorch3d.git@stable"

[tool.pixi.environments]
drp3d = ["drp3d"]

[tool.pytest.ini_options]
markers = ["unit"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "docs/conf.py",
]

line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D", "TCH", "ANN"]
ignore = ["ANN401", "D", "ANN"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["vc_core"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
suppress-dummy-args = true
suppress-none-returning = true


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
