<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>system_pkg</name>
  <version>0.0.0</version>
  <description>
    Main package for launching visual control system for robotic manipulators
  </description>

  <author>Sherif Samy</author>
  <maintainer email="sherif252525@gmail.com">Sherif Samy</maintainer>
  <license file="LICENSE">GNU General Public License</license>

  <url type="bugtracker">https://github.com/Sherif-Sameh/visual_control_pkg/issues</url>
  <url type="repository">https://github.com/Sherif-Sameh/visual_control_pkg</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
