<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vc_core</name>
  <version>0.0.0</version>
  <description>
    Controllers for vision-based control of robotic manipulators
  </description>

  <author>Sherif Samy</author>
  <maintainer email="sherif252525@gmail.com">Sherif Samy</maintainer>
  <license file="LICENSE">GNU General Public License</license>

  <url type="bugtracker">https://github.com/Sherif-Sameh/visual_control_pkg/issues</url>
  <url type="repository">https://github.com/Sherif-Sameh/visual_control_pkg</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>eigen</depend>
  <depend>visp</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>kdl_parser</depend>
  <depend>yaml_cpp_vendor</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
