[project]
name = "vc_core"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy >= 1.26.4",
    "torch >= 2.0.0, <= 2.4.1",
    "torchvision",
    "pandas",
    "opencv-python",
    "pillow",
    "matplotlib >= 3.8.4",
    "wandb",
    "toml",
    "fire",
]

[tool.setuptools]
packages = ["vc_core"]

[project.optional-dependencies]
tests = [
    "pytest",
]
# Must be installed with the --no-build-isolation option
segmentation = [
    "ultralytics",
    "sam-2 @ git+https://github.com/facebookresearch/sam2.git@c2ec8e1",
    "huggingface-hub",
    "ninja",
    "flash-attn",
]
# Must be installed with the --no-build-isolation option
drp3d = [
    "iopath",
    "pytorch3d @ git+https://github.com/facebookresearch/pytorch3d.git@stable",
]
# Must be installed with the --no-build-isolation option
# and -f https://nvidia-kaolin.s3.us-east-2.amazonaws.com/torch-{TORCH_VER}_cu{CUDA_VER}.html
drnvd = [
    "setuptools",
    "wheel",
    "ninja",
    "kaolin==0.18.0",
    "nvdiffrast @ git+https://github.com/NVlabs/nvdiffrast.git@v0.4.0",
]